[tool.black]
line-length = 120

[tool.poetry]
name = "pyglass-api"
version = "0.3.0"
description = "python wrapper for /dev-ptera/spyglass-api"
authors = ["Eulentier161 <git@eule.wtf>"]
repository = "https://github.com/Eulentier161/pyglass-api"
license = "MIT"
readme = "README.md"
packages = [{ include = "pyglass" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
